RESOLVED FIXED157094
Fix client certificate authentication with NSURLSession on iOS
https://bugs.webkit.org/show_bug.cgi?id=157094
Summary Fix client certificate authentication with NSURLSession on iOS
Alex Christensen
Reported 2016-04-27 11:25:16 PDT
Fix client certificate authentication with NSURLSession on iOS
Attachments
Patch (2.48 KB, patch)
2016-04-27 11:37 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2016-04-27 11:37:16 PDT
Darin Adler
Comment 2 2016-04-27 11:44:56 PDT
Comment on attachment 277500 [details] Patch Can we add a regression test?
Alex Christensen
Comment 3 2016-04-27 12:57:55 PDT
Comment on attachment 277500 [details] Patch There is no infrastructure for using valid certificates. There is a manual test in the radar. This is going on the list of things to add to the ssl tests once we have such infrastructure.
WebKit Commit Bot
Comment 4 2016-04-27 13:48:45 PDT
Comment on attachment 277500 [details] Patch Clearing flags on attachment: 277500 Committed r200148: <http://trac.webkit.org/changeset/200148>
WebKit Commit Bot
Comment 5 2016-04-27 13:48:49 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.